--- a/react-frontend/tsconfig.json
+++ b/react-frontend/tsconfig.json
@@ -18,9 +18,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./",
+    "rootDirs": [
+      "./src"
+    ],
+    "paths": {
+      "src/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
-    "src"
+    "./src/",
+    "index.d.ts"
   ]
 }
