--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@types/swagger-ui-react": "^4.11.0",
     "antd": "^5.1.2",
     "axios": "^1.2.2",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
+    "swagger-ui-react": "^4.15.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
