--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -7,13 +7,15 @@
     "start": "SET DBPORT=65535 && node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "canvas": "^2.11.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "monk": "7.3.3",
     "morgan": "~1.9.1",
-    "njwt": "^1.0.0",
-    "monk": "7.3.3"
+    "njwt": "^1.0.0"
   }
 }
