--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,36 @@
-node_modules
-npm-debug.log
-.idea
-package-lock.json
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+
+# TypeScript v1 declaration files
+typings/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint ignore
+.eslint*
+
+# Optional Prettier ignore
+.prettier*
+
+# Output of 'npm pack'
+*.tgz
+
+
+# dotenv environment variables file
+.env
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
