--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"npm start --prefix ../mongoserver\" \"npm start --prefix ../node-backend\" \"npm start --prefix ../react-frontend\"",
-    "startdev": "concurrently \"npm run startdev --prefix ../node-backend\" \"npm start --prefix ../react-frontend\"",
-    "installall": "npm install && cd ../mongoserver && npm install && cd ../node-backend && npm install && cd ../react-frontend && npm install"
+    "start": "concurrently \"npm start --prefix ../server/mongoserver\" \"npm start --prefix ../server\" \"npm start --prefix ../client\"",
+    "startdev": "concurrently \"npm run startdev --prefix ../server\" \"npm start --prefix ../client\"",
+    "installall": "npm install && cd ../server/mongoserver && npm install && cd .. && npm install && cd ../client && npm install"
   },
   "keywords": [],
   "author": "LMU Mediainformatics Group",
