--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^6.8.3",
     "monk": "7.3.3",
     "morgan": "~1.9.1",
     "njwt": "^1.0.0"
