--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -7,6 +7,7 @@
     "start": "SET DBPORT=65535 && node ./bin/www"
   },
   "dependencies": {
+    "archiver": "^5.3.1",
     "axios": "^1.2.2",
     "canvas": "^2.11.0",
     "cookie-parser": "~1.4.4",
