--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.5.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
