--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "react-router-dom": "^6.7.0",
     "react-web-editor": "^2.2.6",
     "wysiwyg-editor-react": "^0.1.7"
   }
