--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -13,6 +13,7 @@
   "author": "LMU Mediainformatics Group",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.5.0"
+    "concurrently": "^7.5.0",
+    "cors": "^2.8.5"
   }
 }
