--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "archiver": "^5.3.1",
     "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "canvas": "^2.11.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
