--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -16,7 +16,7 @@
     "concurrently": "^7.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5"
   }
