--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -16,8 +16,8 @@
     "concurrently": "^7.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4",
     "concurrently": "^7.5.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "typescript": "^4.9.4"
   }
 }
