--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
+    "@types/randomcolor": "^0.5.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@types/swagger-ui-react": "^4.11.0",
     "antd": "^5.1.2",
     "axios": "^1.2.2",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
