--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,17 +14,23 @@
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@types/swagger-ui-react": "^4.11.0",
+    "@types/w3c-image-capture": "^1.0.7",
     "antd": "^5.1.2",
     "axios": "^1.2.2",
+    "konva": "^8.4.2",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
+    "react-uuid": "^2.0.0",
+    "react-webcam": "^7.0.1",
     "styled-components": "^5.3.6",
     "swagger-ui-react": "^4.15.5",
     "typescript": "^4.9.4",
+    "use-image": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
