--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mememuclauncher",
+  "name": "mememuc-launcher",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,7 @@
     "concurrently": "^7.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
     "concurrently": "^7.5.0",
     "cors": "^2.8.5"
   }
