--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -13,6 +13,7 @@
   "author": "LMU Mediainformatics Group",
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "concurrently": "^7.5.0",
     "react-router-dom": "^6.7.0"
   }
