add post,get functions

--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "startdev": "node ./bin/www",
+    "startdev": "SET DBPORT=27017 && node ./bin/www",
     "start": "SET DBPORT=65535 && node ./bin/www"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js": "^0.1.0",
     "monk": "7.3.3",
     "morgan": "~1.9.1",
     "njwt": "^1.0.0"
