--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -9,6 +9,7 @@
     "all": "^0.0.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.7.0",
