--- a/client/package.json
+++ b/client/package.json
@@ -15,19 +15,18 @@
         "@types/react-router-dom": "^5.3.3",
         "bootstrap": "^5.2.3",
         "generate-react-cli": "^8.0.1",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.7.1",
+        "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.4",
-        "react-scripts": "5.0.1",
         "sass": "^1.56.1",
         "typescript": "^4.9.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "vite",
+        "build": "tsc && vite build",
+        "serve": "vite preview"
     },
     "eslintConfig": {
         "extends": [
@@ -46,5 +45,11 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^3.1.0",
+        "vite": "^4.1.1",
+        "vite-plugin-svgr": "^2.4.0",
+        "vite-tsconfig-paths": "^4.0.5"
     }
 }
