--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,23 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ESNext",
     "lib": [
       "dom",
       "dom.iterable",
-      "ESNext"
+      "ES6"
     ],
     "typeRoots": [
       "node_modules/@types",
       "src/types/index.d.ts"
     ],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
+
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "ES6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -27,5 +27,9 @@
   "include": [
     "src", 
     "src/types/index.d.ts"
+  ], 
+  "exclude": [
+    "node_modules", 
+    "build"
   ]
 }
