--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
     "name": "server-memeapp",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "private": true,
     "type": "module",
     "scripts": {
-        "startdev": "node index.js",
+        "startdev": "nodemon index.js",
         "start": "SET DBPORT=65535 && node index.js"
     },
     "dependencies": {
@@ -12,7 +12,6 @@
         "@azure/storage-blob": "^12.12.0",
         "@sendgrid/mail": "^7.7.0",
         "bcrypt": "^5.1.0",
-        "cjs-to-es6": "^2.0.1",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "debug": "^4.3.4",
@@ -25,6 +24,7 @@
         "monk": "7.3.3",
         "morgan": "^1.3.2",
         "multer": "^1.4.5-lts.1",
+        "nodemon": "^2.0.20",
         "pg": "^8.8.0",
         "sequelize": "^6.26.0",
         "sharp": "^0.31.3",
@@ -32,6 +32,6 @@
         "uuid": "^9.0.0"
     },
     "engines": {
-        "node": "18.12.1"
+        "node": "18.13.0"
     }
 }
