Completely restructured the memes GET request part. It now more closely follow REST. The /memes GET was separates into /memes GET (json), /memes/image (image urls), /memes/download (zip), /memes/single-view (single-view urls). The same was done for /memes/:publicId GET requests (Though their requests do not return array; especially /image returns the image directly).

--- a/node-backend/.env
+++ b/node-backend/.env
@@ -1,2 +1,13 @@
-DOMAIN=localhost:3000
+
+# Database
+DBPORT=65535
+
+# Express backend
+BE_PORT=3001
+BE_DOMAIN=localhost:3001
+
+# React frontend
+FE_PORT=3000
+FE_DOMAIN=localhost:3000
+
 JWT_SECRET=thisIsTotallySecretWhoCaresThisIsJustATestServer
