--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -12,9 +12,11 @@
     "bcrypt": "^5.1.0",
     "canvas": "^2.11.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.12.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
