--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "js": "^0.1.0",
     "mongodb": "^5.0.1",
+    "mongoose": "^6.9.2",
     "monk": "7.3.3",
     "morgan": "~1.9.1",
     "njwt": "^1.0.0"
