--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.3.3",
     "react-component-export-image": "^1.0.6",
     "react-draggable": "^4.4.5",
     "react-native": "^0.71.2",
