--- a/mongoserver/package.json
+++ b/mongoserver/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "mongodbserver",
+  "name": "MongoDB Server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules index.mjs"
+    "start": "concurrently-await \"node --experimental-modules index.mjs\" \"mongorestore mongodb://127.0.0.1:65535 --db omm-ws2223 data\\ await --delay 2000\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently-await": "^1.2.0",
     "express": "^4.18.2",
-    "mongodb-memory-server": "^8.11.1",
-    "mongoose": "^6.8.3"
-  },
-  "config": {
-    "mongodbMemoryServer": {
-      "arch ": "x64"
-    }
+    "mongodb-memory-server": "^8.10.0",
+    "mongoose": "^6.7.4"
   }
 }
