--- a/mememuc-launcher/package.json
+++ b/mememuc-launcher/package.json
@@ -13,6 +13,8 @@
   "author": "LMU Mediainformatics Group",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.5.0"
+    "axios": "^1.2.2",
+    "concurrently": "^7.5.0",
+    "mongoose": "^6.8.3"
   }
 }
