--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "startdev": "node ./bin/www",
-    "start": "SET DBPORT=65535 && node ./bin/www"
+    "start": "env-cmd node ./bin/www"
   },
   "dependencies": {
     "archiver": "^5.3.1",
@@ -15,13 +15,13 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
-    "monk": "7.3.3",
+    "mongoose": "^6.7.4",
     "morgan": "~1.9.1",
     "njwt": "^1.0.0"
   }
