--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/randomcolor": "^0.5.7",
     "@types/react": "^18.0.26",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@types/swagger-ui-react": "^4.11.0",
@@ -20,6 +21,7 @@
     "konva": "^8.4.2",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.6.1",
