--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,6 +17,10 @@
     "@types/w3c-image-capture": "^1.0.7",
     "antd": "^5.1.2",
     "axios": "^1.2.2",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "crypto": "npm:crypto-browserify",
+    "crypto-browserify": "^3.12.0",
     "konva": "^8.4.2",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
@@ -27,6 +31,7 @@
     "react-use": "^17.4.0",
     "react-uuid": "^2.0.0",
     "react-webcam": "^7.0.1",
+    "stream": "npm:stream-browserify",
     "styled-components": "^5.3.6",
     "swagger-ui-react": "^4.15.5",
     "typescript": "^4.9.4",
@@ -56,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2"
   }
 }
