--- a/react-frontend/public/manifest.json
+++ b/react-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "LMU Meme",
+  "name": "LMU Meme Generator",
   "icons": [
     {
       "src": "favicon.ico",
