--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.1.2",
     "axios": "^1.2.2",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "konva": "^8.4.2",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
