:heavy_plus_sign: add doom scroll dependency

--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
