refactor: ♻️ switched backend to TypeScript

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,28 @@
   "name": "basic-auth-app",
   "version": "0.0.0",
   "private": true,
+  "main": "./dist/app.js",
   "scripts": {
-    "startdev": "node ./bin/www",
-    "start": "env-cmd node ./bin/www"
+    "build": "tsc",
+    "dev": "nodemon src/app.ts",
+    "start": "env-cmd nodemon src/app.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.4",
-    "env-cmd": "^10.1.0",
     "express": "~4.18.2",
     "http-errors": "~2.0.0",
     "jade": "~1.11.0",
     "monk": "7.3.4",
     "morgan": "~1.10.0",
     "njwt": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
+    "env-cmd": "^10.1.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
