--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,14 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.0.3",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
