--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fabric": "^5.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
