--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "fabric": "^5.3.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-color-kit": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
