--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
     "fabric": "^5.3.0",
     "vue": "^3.3.4",
     "vue-color-kit": "^1.0.6"
