--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.6",
+    "cors": "^2.8.5",
     "debug": "~4.3.4",
     "express": "~4.18.2",
     "http-errors": "~2.0.0",
     "jade": "~1.11.0",
     "monk": "7.3.4",
     "morgan": "~1.10.0",
+    "multer": "1.4.5-lts.1",
     "njwt": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.9.0",
     "env-cmd": "^10.1.0",
     "nodemon": "^3.0.1",
