--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@heroicons/vue": "^2.0.18",
     "fabric": "^5.3.0",
     "vue": "^3.3.4",
-    "vue-color-kit": "^1.0.6"
+    "vue-color-kit": "^1.0.6",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
