--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,15 @@ services:
     environment:
       - MONGO_URI=mongo:27017
     ports:
-      - "80:3000"
+      - "3001:3001"
+    links:
+      - mongo
+  reactfrontend:
+    build:
+      context: ./react-frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
     links:
       - mongo
   dataimport:  # the actual mongoserver is not started - only its data files are taken
