--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.6.2",
     "fabric": "^5.3.0",
     "vue": "^3.3.4",
     "vue-color-kit": "^1.0.6",
