--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "@trpc/client": "^10.44.1",
     "axios": "^1.6.2",
     "fabric": "^5.3.0",
     "vue": "^3.3.4",
