--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,24 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
+    "prisma": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "@trpc/server": "^10.44.1",
     "@types/cors": "^2.8.16",
     "cors": "^2.8.5",
-    "ts-node": "^10.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.9.0",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
