--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.7.0",
     "@trpc/server": "^10.44.1",
     "@types/cors": "^2.8.16",
+    "bson": "^6.2.0",
     "cors": "^2.8.5",
     "zod": "^3.22.4"
   },
