--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.5.1",
     "all": "^0.0.0",
     "bootstrap": "^5.3.2",
+    "gifshot": "^0.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
